# LogiPass

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  main.py  requirements.txt  setup.cfg
.github/workflows/: pylint.yml  python-app.yml  test.yml
logiapp/: app.py  main.py
logipass/: app.py  main.py
logipass/templates/: index.html
tests/: test_main.py
