[metadata]
name = logipass
version = 0.0.2
author = Rahul Madan Raju
description = Tool to generate safe, secure and random passwords
long_description = file: README.md
keywords = password, password-generator, passwords
url = https://github.com/rahulmadanraju/LogiPass
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    importlib-metadata; python_version<"3.9"

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    executable-name = logipass.app:main

[tool:pytest]
addopts =
    --verbose
    --junitxml xunit.xml
    --cov logipass
    --cov-config .coveragerc
    --cov-report term-missing
    --cov-report xml
python_files = tests/*
junit_family = xunit2
